<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/homescreen"
        android:layout_width="411dp"
        android:layout_height="374dp"
        android:contentDescription="@string/just_a_tree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/treeoflife"
        android:scaleType="fitXY"
        />

    <Button
        android:id="@+id/newnotebutton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/create_new_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homescreen"
        android:onClick="createnote"
        />

    <Button
        android:id="@+id/shownotebutton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/show_all_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newnotebutton"
        android:onClick="shownotes"
        />
</androidx.constraintlayout.widget.ConstraintLayout>