<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/updatenotetext"
        android:layout_width="378dp"
        android:layout_height="290dp"
        android:gravity="bottom"
        android:hint="@string/edit_notes_here"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/editbtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="177dp"
        android:text="@string/edit_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatenotetext"
        android:onClick="updatenotes"
        />

    <Button
        android:id="@+id/deletebtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/delete_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editbtn"
        app:layout_constraintTop_toBottomOf="@+id/updatenotetext"
        android:onClick="delete"
        />

</androidx.constraintlayout.widget.ConstraintLayout>