<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/notedatatext"
        android:layout_width="369dp"
        android:layout_height="281dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/make_some_notes"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:lines="20"
        android:maxLines="20"
        android:minLines="20"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="148dp"
        android:text="@string/save"
        android:onClick="saveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notedatatext"
        android:layout_marginLeft="147dp"
        android:layout_marginRight="148dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:gravity="center"
        android:text="@string/note_maker"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>